--- a/blog.html
+++ b/blog.html
@@ -1278,6 +1278,27 @@ src=&quot;https://www.facebook.com/tr?id=330029272553636&amp;ev=PageView&amp;nos
             <div class="space-y-12 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:grid-cols-3 lg:gap-x-8">
                 
                     <div class="flex flex-col bg-white rounded-lg shadow-lg p-8 items-start">
+                        <div class="text-left text-sm text-gray-500">May 25, 2023</div>
+                        <div class="text-left text-xl text-gray-900 font-semibold mt-2">
+                            <a
+                                class="text-left text-xl text-gray-900 font-semibold"
+                                href="blog-8278"
+                            >
+                                Top Trends in Landscaping &amp; Hardscaping for
+                            </a>
+                        </div>
+                        <div class="text-left text-base text-gray-500 line-clamp-5 mt-4">Landscaping and hardscaping have evolved considerably over the years, and this year promises to be no exception. Every year, homeowners seek innovative landscaping and hardscaping ideas to transfo…</div>
+                        <div class="text-left mt-4 text-primary">
+                            <a
+                                class="text-primary font-semibold"
+                                href="blog-8278"
+                            >
+                                Read full post
+                            </a>
+                        </div>
+                    </div>
+                
+                    <div class="flex flex-col bg-white rounded-lg shadow-lg p-8 items-start">
                         <div class="text-left text-sm text-gray-500">May 11, 2023</div>
                         <div class="text-left text-xl text-gray-900 font-semibold mt-2">
                             <a
