--- a/blog.html
+++ b/blog.html
@@ -1282,6 +1282,27 @@ src=&quot;https://www.facebook.com/tr?id=330029272553636&amp;ev=PageView&amp;nos
                         <div class="text-left text-xl text-gray-900 font-semibold mt-2">
                             <a
                                 class="text-left text-xl text-gray-900 font-semibold"
+                                href="blog-8279"
+                            >
+                                Transform Your Outdoor Space with These Landscaping and Hardscaping Ideas
+                            </a>
+                        </div>
+                        <div class="text-left text-base text-gray-500 line-clamp-5 mt-4">Transform Your Outdoor Space with These Landscaping and Hardscaping IdeasOur outdoor space is an extension of our living area and is where we spend most of our time when the weather is good…</div>
+                        <div class="text-left mt-4 text-primary">
+                            <a
+                                class="text-primary font-semibold"
+                                href="blog-8279"
+                            >
+                                Read full post
+                            </a>
+                        </div>
+                    </div>
+                
+                    <div class="flex flex-col bg-white rounded-lg shadow-lg p-8 items-start">
+                        <div class="text-left text-sm text-gray-500">May 25, 2023</div>
+                        <div class="text-left text-xl text-gray-900 font-semibold mt-2">
+                            <a
+                                class="text-left text-xl text-gray-900 font-semibold"
                                 href="blog-8278"
                             >
                                 Top Trends in Landscaping &amp; Hardscaping for
