--- a/blog.html
+++ b/blog.html
@@ -1149,7 +1149,7 @@ src=&quot;https://www.facebook.com/tr?id=330029272553636&amp;ev=PageView&amp;nos
                                 Transform Your Outdoor Space with These Landscaping and Hardscaping Ideas
                             </a>
                         </div>
-                        <div class="text-left text-base text-gray-500 line-clamp-5 mt-4">Transform Your Outdoor Space with These Landscaping and Hardscaping IdeasOur outdoor space is an extension of our living area and is where we spend most of our time when the weather is good…</div>
+                        <div class="text-left text-base text-gray-500 line-clamp-5 mt-4">Transform Your Outdoor Space with These Landscaping and Hardscaping IdeasOur outdoor space is an extension of our living area and is where we spend most of our time when th…</div>
                         <div class="text-left mt-4 text-primary">
                             <a
                                 class="text-primary font-semibold"
